<resources>
    <string name="app_name">Smart Farm</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upload">UPLOAD</string>
    <string name="post_title">Post Title</string>
    <string name="u">U</string>
    <string name="enter_description">Enter Description</string>
    <string name="_0">0</string>
    <string name="point">POINT</string>
    <string name="post">POST</string>
    <string name="postCount">0</string>
    <string name="connectionCount">0</string>
    <string name="connection">CONNECTION</string>
    <string name="pointCount">0</string>
    <string name="username">Username</string>
    <string name="product_lable">Seaweed Green Fertilizer</string>
    <string name="deal_price">₹150.00</string>
    <string name="product_description">Potassium can reduce moisture loss from growing plants, thereby giving some drought resistance. Potassium improves the color, flavor, and storage of fruit and vegetables.</string>
    <string name="offer_on_product">(50% off on this order)</string>
    <string name="saving_after_discount">₹150.00</string>
</resources>